--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,25 +21,23 @@
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
-
-        <a href="/restaurants/1" class="text-secondary">
+        {{#each restaurants}}
+        <a href="/restaurants/{{this._id}}" class="text-secondary">
           <div class="card mb-3">
-            <img class="card-img-top" src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5635/01.jpg"
-              alt="Sababa 沙巴巴中東美食">
+            <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
             <div class="card-body p-3">
-              <h6 class="card-title mb-1">Sababa 沙巴巴中東美食</h6>
+              <h6 class="card-title mb-1">{{this.name}}</h6>
               <div class="restaurant-category mb-1">
-                <i class="fas fa-utensils pr-2"></i>中東料理
+                <i class="fas fa-utensils pr-2"></i>{{this.category}}
               </div>
               <span class="rating badge badge-pill font-weight-normal">
-                4.2
+                {{this.rating}}
                 <i class="fas fa-star fa-xs"></i>
               </span>
-
             </div>
           </div>
         </a>
-
+        {{/each}}
       </div>
     </div>
   </div>
