--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,18 +25,30 @@
         <a href="/restaurants/{{this._id}}" class="text-secondary">
           <div class="card mb-3">
             <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
-            <div class="card-body p-3">
-              <h6 class="card-title mb-1">{{this.name}}</h6>
-              <div class="restaurant-category mb-1">
-                <i class="fas fa-utensils pr-2"></i>{{this.category}}
+            <div class="card-body">
+              <div class="restaurant-info">
+                <h6 class="card-title mb-1">{{this.name}}</h6>
+                <div class="restaurant-category mb-1">
+                  <i class="fas fa-utensils pr-2"></i>{{this.category}}
+                </div>
+                <span class="rating badge badge-pill font-weight-normal">
+                  {{this.rating}}
+                  <i class="fas fa-star fa-xs"></i>
+                </span>
               </div>
-              <span class="rating badge badge-pill font-weight-normal">
-                {{this.rating}}
-                <i class="fas fa-star fa-xs"></i>
-              </span>
+              <div class="crud">
+                <a class="crud-button a-button" href="">Edit</a>
+                <a class="crud-button a-button" href="">Detail</a>
+                <form action="" class="f-button">
+                  <button class="crud-button col-12">Delete</button>
+                </form>
+              </div>
             </div>
+
           </div>
+
         </a>
+
         {{/each}}
       </div>
     </div>
