feat add detail function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,7 +38,7 @@
               </div>
               <div class="crud">
                 <a class="crud-button a-button" href="">Edit</a>
-                <a class="crud-button a-button" href="">Detail</a>
+                <a class="crud-button a-button" href="/restaurants/{{this._id}}">Detail</a>
                 <form action="" class="f-button">
                   <button class="crud-button col-12">Delete</button>
                 </form>
