--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,3 @@
-  margin-top: 10px;
 body {
   font-family: 'Noto Sans TC', sans-serif;
 }
@@ -117,15 +116,13 @@ div.card-body {
   text-align: center;
 }
 
-a.crud-button:hover, .crud-button:hover  {
+a.crud-button:hover, .crud-button:hover {
   text-decoration: none;
   color: black;
   background-color: #f5f5f5;
 }
 
-
-
-//show page
+/*show page*/
 .restaurant-show-title {
   position: relative;
   top: -100px;
@@ -143,6 +140,9 @@ a.crud-button:hover, .crud-button:hover  {
   border-left: 5px solid rgba(0, 0, 0, 0.5);
   margin: 20px 0;
   padding: 5px 0px 5px 15px;
+}
+a:hover {
+  text-decoration: none;
 }
 
 
