--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,6 +23,7 @@
             width="30" height="30" class="d-inline-block nav-img" alt="好。吃">
           我的餐廳清單
         </a>
+        <a href="/restaurant/create" class="add-button"><i class="far fa-plus-square"></i>CREATE</a>
       </div>
     </nav>
 
