--- a/views/create.hbs
+++ b/views/create.hbs
@@ -38,6 +38,7 @@
         <textarea class="w-100" placeholder="請輸入相關描述，例如：酒吧結合台式熱炒料理，每道菜都有不同於其他間店的風味，麻婆豆腐特別獨特好吃！" name="description"
           required="required"></textarea>
       </div>
+      <a href="/" class="info-button">回首頁</a>
       <button type="submit">新增</button>
     </div>
   </form>
