--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -43,8 +43,9 @@
         <textarea class="w-100" placeholder="請輸入相關描述，例如：酒吧結合台式熱炒料理，每道菜都有不同於其他間店的風味，麻婆豆腐特別獨特好吃！" name="description"
           required="required">{{restaurant.description}}</textarea>
       </div>
+      <a href="/" class="info-button">回首頁</a>
+      <a href="/restaurant/detail/{{restaurant._id}}" class="info-button">店家頁面</a>
       <button type="submit">儲存</button>
-
     </div>
   </form>
 </div>
