--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,14 +16,14 @@
 <body>
   <header>
     <!-- navigation -->
-    <nav class="navbar navbar-light bg-dark">
+    <nav class="navbar navbar-light bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="/">
           <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
             width="30" height="30" class="d-inline-block nav-img" alt="好。吃">
           我的餐廳清單
         </a>
-        <a href="/create" class="add-button">Create</a>
+        <a href="/restaurant/create" class="add-button"><i class="fas fa-plus"></i>新增店家</a>
       </div>
     </nav>
 
