--- a/views/show.hbs
+++ b/views/show.hbs
@@ -1,6 +1,7 @@
 <div class="banner"></div>
 <h1 class="mb-1 restaurant-show-title">{{restaurant.name}}</h1>
 <div class="detail-crud">
+  <a class="crud-button" href="/">回餐廳清單</a>
   <a class="crud-button" href="/restaurant/{{restaurant._id}}/edit">編輯</a>
   <form action="/restaurant/delete/{{restaurant._id}}" method="POST">
     <button type="submit" class="crud-button col-12">刪除</button>
