--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,5 +1,5 @@
 <div class="container d-flex justify-content-center">
-  <form class="enter-info" action="/restaurant/{{restaurant._id}}/edit" method="POST">
+  <form class="enter-info" action="/restaurant/{{restaurant._id}}?_method=PUT" method="POST">
     <div class="row">
       <div class="col-sm-6 col-12">
         <p>餐廳名稱：</p>
