refactor: add modify express routes

--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,5 +1,5 @@
 <div class="container d-flex justify-content-center">
-  <form class="enter-info" action="/restaurant/create" method="POST">
+  <form class="enter-info" action="/restaurant" method="POST">
     <div class="row">
       <div class="col-sm-6 col-12">
         <p>餐廳名稱：</p>
