feat: modify create.hbs and edit.hbs

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -29,8 +29,8 @@
           value="{{restaurant.location}}">
       </div>
       <div class="col-sm-6 col-12">
-        <p>GOOGLE 評分：</p>
-        <input class="w-100" type="text" placeholder="e.g. 4.2" name="rating" required="required"
+        <p>GOOGLE 評分： (請輸入 0 - 10 )</p>
+        <input class="w-100" type="number" placeholder="e.g. 4.2" min="0" max="10" name="rating" required="required"
           value="{{restaurant.rating}}">
       </div>
       <div class="col-12">
