feat: modify create.hbs and edit.hbs

--- a/views/create.hbs
+++ b/views/create.hbs
@@ -18,7 +18,7 @@
         <input class="w-100" type="text" placeholder="09-XXX-XXX、02-XXXXXX" name="phone">
       </div>
       <div class="col-12">
-        <p>相關圖片網址：</p>
+        <p>相關圖片網址：(選填)</p>
         <input class="w-100" type="text" placeholder="https://.." name="image">
       </div>
       <div class="col-sm-6">
