--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,6 +62,12 @@ a.add-button:hover {
   font-size: 20px;
   letter-spacing: 1px;
 }
+.dropdown-toggle {
+  background-color: transparent;
+  border-radius: 3px;
+  border: 2px solid #797979;
+  padding: 5px 38px;
+}
 
 .form-control::placeholder {
   color: #aaaaaa;
