--- a/views/create.hbs
+++ b/views/create.hbs
@@ -27,7 +27,8 @@
       </div>
       <div class="col-sm-6 col-12">
         <p>GOOGLE 評分： (請輸入 0 - 10 )</p>
-        <input class="w-100" type="number" placeholder="e.g. 4.2" min="0" max="10" name="rating" required="required">
+        <input class="w-100" type="number" placeholder="e.g. 4.2" min="0" max="10" name="rating" required="required"
+          step="0.1">
       </div>
       <div class="col-12">
         <p>GOOGLE-MAP 網址：</p>
