--- a/views/register.hbs
+++ b/views/register.hbs
@@ -6,20 +6,21 @@
       <form action="/users/register" method="POST">
         <div class="form-group">
           <label for="name">名字</label>
-          <input type="text" id="name" name="name" placeholder="Enter Name" class="form-control">
+          <input type="text" id="name" name="name" placeholder="Enter Name" class="form-control" value="{{name}}">
         </div>
         <div class="form-group">
           <label for="email">電子郵件*</label>
-          <input type="email" id="email" name="email" placeholder="Enter Email" class="form-control">
+          <input type="email" id="email" name="email" placeholder="Enter Email" class="form-control" value="{{email}}">
         </div>
         <div class="form-group">
           <label for="password">密碼*</label>
-          <input type="password" id="password" name="password" placeholder="Enter Password" class="form-control">
+          <input type="password" id="password" name="password" placeholder="Enter Password" class="form-control"
+            value="{{password}}">
         </div>
         <div class="form-group">
           <label for="confirmPassword">再輸入一次密碼*</label>
           <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Enter Password"
-            class="form-control">
+            class="form-control" value="{{confirmPassword}}">
         </div>
         <button type="submit" class="btn btn-local btn-block">註冊</button>
         <a href="" class="btn btn-facebook btn-block">使用Facebook註冊</a>
