--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,7 +19,8 @@
 
 <!-- restaurant list -->
 <div class="container mt-5">
-  <div class="row d-flex justify-content-end mb-4">
+  <div class="row d-flex justify-content-between mb-4 px-5">
+    <a href="/restaurant/create" class="add-button"><i class="fas fa-plus"></i>新增店家</a>
     <div class="dropdown">
       <span style="font-size: 1.2rem;">排列方式：</span>
       <button class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
