--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,7 +23,7 @@
             width="30" height="30" class="d-inline-block nav-img" alt="好。吃">
           我的餐廳清單
         </a>
-        <a href="/restaurant/create" class="add-button"><i class="fas fa-plus"></i>新增店家</a>
+        <a href="/users/logout" class="logout-button">登出</a>
       </div>
     </nav>
 
