--- a/views/register.hbs
+++ b/views/register.hbs
@@ -10,17 +10,18 @@
         </div>
         <div class="form-group">
           <label for="email">電子郵件*</label>
-          <input type="email" id="email" name="email" placeholder="Enter Email" class="form-control" value="{{email}}">
+          <input type="email" id="email" name="email" placeholder="Enter Email" class="form-control" value="{{email}}"
+            required="required">
         </div>
         <div class="form-group">
           <label for="password">密碼*</label>
           <input type="password" id="password" name="password" placeholder="Enter Password" class="form-control"
-            value="{{password}}">
+            value="{{password}}" required="required">
         </div>
         <div class="form-group">
           <label for="confirmPassword">再輸入一次密碼*</label>
           <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Enter Password"
-            class="form-control" value="{{confirmPassword}}">
+            class="form-control" value="{{confirmPassword}}" required="required">
         </div>
         <button type="submit" class="btn btn-local btn-block">註冊</button>
         <a href="" class="btn btn-facebook btn-block">使用Facebook註冊</a>
