--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,8 +9,9 @@
         </div>
         <div class="form-group">
           <label for="password">密碼</label>
-          <input type="text" id="password" name="password" placeholder="輸入密碼"" class=" form-control">
+          <input type="password" id="password" name="password" placeholder="輸入密碼"" class=" form-control">
         </div>
+        {{> message}}
         <button type="submit" class="btn btn-local btn-block">登入</button>
         <a href="" class="btn btn-facebook btn-block">使用Facebook登入</a>
       </form>
