--- a/views/register.hbs
+++ b/views/register.hbs
@@ -14,7 +14,8 @@
             required="required">
         </div>
         <div class="form-group">
-          <label for="password">密碼*</label>
+          <label for="password">密碼* <span class="ml-2"
+              style="color: #706750; font-size: 0.9rem;">請至少包含一個字母(不限大小)與一個數字</span></label>
           <input type="password" id="password" name="password" placeholder="Enter Password" class="form-control"
             value="{{password}}" required="required">
         </div>
@@ -23,6 +24,7 @@
           <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Enter Password"
             class="form-control" value="{{confirmPassword}}" required="required">
         </div>
+        {{> message}}
         <button type="submit" class="btn btn-local btn-block">註冊</button>
         <a href="" class="btn btn-facebook btn-block">使用Facebook註冊</a>
       </form>
