feat: facebook login

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -21,7 +21,12 @@
         <a class="navbar-brand" href="/">
           <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
             width="30" height="30" class="d-inline-block nav-img" alt="好。吃">
+          {{#if user.name}}
+          {{user.name}}的餐廳清單
+          {{else}}
           我的餐廳清單
+          {{/if}}
+
         </a>
         {{#if isAuthenticated}}
         <a href="/users/logout" class="logout-button">登出</a>
