--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,7 +13,7 @@
         </div>
         {{> message}}
         <button type="submit" class="btn btn-local btn-block">登入</button>
-        <a href="" class="btn btn-facebook btn-block">使用Facebook登入</a>
+        <a href="/auth/facebook" class="btn btn-facebook btn-block">使用Facebook登入</a>
       </form>
       <p class="lead mt-4">
         沒有帳號嗎？ <a href="/users/register">註冊</a>
