--- a/views/register.hbs
+++ b/views/register.hbs
@@ -26,7 +26,7 @@
         </div>
         {{> message}}
         <button type="submit" class="btn btn-local btn-block">註冊</button>
-        <a href="" class="btn btn-facebook btn-block">使用Facebook註冊</a>
+        <a href="/auth/facebook" class="btn btn-facebook btn-block">使用Facebook註冊</a>
       </form>
       <p class="lead mt-4">
         已經有帳號了？ <a href="/users/login">登入</a>
