feat: add login error message

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,7 +5,8 @@
       <form action="/users/login" method="POST">
         <div class="form-group">
           <label for="email">電子郵件</label>
-          <input type="text" id="email" name="email" placeholder="ABC@example.com"" class=" form-control">
+          <input type="text" id="email" name="email" placeholder="ABC@example.com" class=" form-control"
+            value="{{email}}">
         </div>
         <div class="form-group">
           <label for="password">密碼</label>
