--- a/views/register.hbs
+++ b/views/register.hbs
@@ -15,7 +15,7 @@
         </div>
         <div class="form-group">
           <label for="password">密碼* <span class="ml-2"
-              style="color: #706750; font-size: 0.9rem;">請至少包含一個字母(不限大小)與一個數字</span></label>
+              style="color: #706750; font-size: 0.9rem;">請至少包含一個數字</span></label>
           <input type="password" id="password" name="password" placeholder="Enter Password" class="form-control"
             value="{{password}}" required="required">
         </div>
